--- a/Assignments/Assignment 3/web700-app/package.json
+++ b/Assignments/Assignment 3/web700-app/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-ejs-layouts": "^2.5.1"
   }
 }
